<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/ReconocerTexto"
        android:text="@string/ReconocerTexto"
        android:fontFamily="@font/opensans_bold"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <ImageView
                android:id="@+id/imagen"
                android:src="@drawable/imagen"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            
            <TextView
                android:text="@string/ReconocerTXT"
                android:textSize="18sp"
                android:fontFamily="@font/opensans_bold"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            
            <EditText
                android:id="@+id/TextoReconocidoEt"
                android:hint="@string/TextoReconocidoEt"
                android:fontFamily="@font/opensans_bold"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            
        </androidx.appcompat.widget.LinearLayoutCompat>
        
    </ScrollView>
    
</androidx.appcompat.widget.LinearLayoutCompat>